refactor: update map persistence logic
Stop using deprecated methods